@@ -1,31 +1,32 @@
 package fr.gouv.vitamui.commons.api.utils;
 
 import fr.gouv.vitamui.commons.api.exception.InvalidTypeException;
-import org.junit.Test;
-
-import java.io.IOException;
+import org.junit.jupiter.api.Test;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 public class CastUtilsTest {
 
     @Test
     public void testCastToInteger() {
-        Integer a = CastUtils.toInteger(new Integer(5));
+        Integer a = CastUtils.toInteger(Integer.valueOf(5));
         assertThat(a).isEqualTo(5);
 
-        a = CastUtils.toInteger(new Float(5));
+        a = CastUtils.toInteger(Float.valueOf(5));
         assertThat(a).isEqualTo(5);
 
-        a = CastUtils.toInteger(new Double(5));
+        a = CastUtils.toInteger(Double.valueOf(5));
         assertThat(a).isEqualTo(5);
 
         a = CastUtils.toInteger(null);
         assertThat(a).isEqualTo(null);
     }
 
-    @Test(expected = InvalidTypeException.class)
-    public void testCastToIntegerFail() throws IOException {
-        Integer a = CastUtils.toInteger("abcd");
+    @Test
+    public void testCastToIntegerFail() {
+        assertThrows(InvalidTypeException.class, () -> {
+            Integer a = CastUtils.toInteger("abcd");
+        });
     }
 }
